--- a/references.bib
+++ b/references.bib
@@ -4223,3 +4223,17 @@ number={CMU-LTI-08-005}}
 	booktitle = {International Conference on Robotics and Automation},
 	year = {2016}
 }
+
+@ARTICLE{Bel,
+	author = "Richard Bellman",
+	title = "A Markovian Decision Process",
+	journal = "Indiana Univ. Math. J.",
+	fjournal = "Indiana University Mathematics Journal",
+	volume = 6,
+	year = 1957,
+	issue = 4,
+	pages = "679--684",
+	issn = "0022-2518",
+	coden = "IUMJAB",
+	mrclass = "",
+}
